[package]
name = "rdo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", features = ["toml"] }
log = { version = "0.4.17", features = ["std", "serde"] }
petgraph = { version = "0.6.3", features = ["serde-1"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[dev-dependencies]
clippy = "0.0.302"
