[package]
name = "rdo"
version = "0.2.3"
authors = ["nseguin42"]
edition = "2021"
description = "A command-line tool for running commands with dependencies."
readme = "README.md"
repository = "https://github.com/nseguin42/rdo"
license-file = "LICENSE"

[dependencies]
async-trait = "0.1.66"
clap = { version = "4.1.8", features = ["derive", "wrap_help", "suggestions"] }
config = { version = "0.13.3", features = ["toml"] }
log = { version = "0.4.17" }
petgraph = { version = "0.6.3" }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.157", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full", "sync"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "user-hooks", "run-cargo-fmt"] }
